// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchSymbolService.search() 1`] = `
Array [
  Object {
    "createdAt": 2022-02-07T09:48:45.704Z,
    "id": "ckzcihw5k0173abpeoeg2kah3",
    "symbol": "$AI",
    "type": "TICKER",
    "updatedAt": 2022-02-07T09:48:45.705Z,
  },
  Object {
    "createdAt": 2022-02-07T09:48:46.805Z,
    "id": "ckzcihx051045abpea04i7wr0",
    "symbol": "$ICE",
    "type": "TICKER",
    "updatedAt": 2022-02-07T09:48:46.805Z,
  },
  Object {
    "createdAt": 2022-02-07T09:48:49.364Z,
    "id": "ckzcihyz84560abpeegkc7zrp",
    "symbol": "$IPOE",
    "type": "TICKER",
    "updatedAt": 2022-02-07T09:48:49.365Z,
  },
  Object {
    "createdAt": 2022-02-07T09:48:46.275Z,
    "id": "ckzcihwlf0534abpe7bpm33r5",
    "symbol": "$WISH",
    "type": "TICKER",
    "updatedAt": 2022-02-07T09:48:46.275Z,
  },
  Object {
    "createdAt": 2022-02-07T09:48:47.360Z,
    "id": "ckzcihxfk1822abpe8fvwqf95",
    "symbol": "$ABBV",
    "type": "TICKER",
    "updatedAt": 2022-02-07T09:48:47.360Z,
  },
  Object {
    "createdAt": 2022-02-07T09:48:47.749Z,
    "id": "ckzcihxqd2266abpepu2subi4",
    "symbol": "$ABNB",
    "type": "TICKER",
    "updatedAt": 2022-02-07T09:48:47.750Z,
  },
  Object {
    "createdAt": 2022-02-07T09:48:48.268Z,
    "id": "ckzcihy4s2868abpex98j2w59",
    "symbol": "$ADBE",
    "type": "TICKER",
    "updatedAt": 2022-02-07T09:48:48.268Z,
  },
  Object {
    "createdAt": 2022-02-07T09:48:48.620Z,
    "id": "ckzcihyek3488abpek1bxldux",
    "symbol": "$AAPL",
    "type": "TICKER",
    "updatedAt": 2022-02-07T09:48:48.621Z,
  },
  Object {
    "createdAt": 2022-02-07T09:48:48.837Z,
    "id": "ckzcihykl3801abperav562m5",
    "symbol": "$DIS",
    "type": "TICKER",
    "updatedAt": 2022-02-07T09:48:48.838Z,
  },
  Object {
    "createdAt": 2022-02-07T09:48:49.118Z,
    "id": "ckzcihyse4199abpemgey3ddc",
    "symbol": "$NIO",
    "type": "TICKER",
    "updatedAt": 2022-02-07T09:48:49.118Z,
  },
  Object {
    "createdAt": 2022-02-07T09:48:46.218Z,
    "id": "ckzcihwju0468abpe7o6fw8et",
    "symbol": "$COIN",
    "type": "TICKER",
    "updatedAt": 2022-02-07T09:48:46.219Z,
  },
  Object {
    "createdAt": 2022-02-07T09:48:47.111Z,
    "id": "ckzcihx8n1508abpej92kfywg",
    "symbol": "[[PIPE]]",
    "type": "TOPIC",
    "updatedAt": 2022-02-07T09:48:47.111Z,
  },
  Object {
    "createdAt": 2022-02-07T09:48:46.503Z,
    "id": "ckzcihwrr0738abpeowe6q7wi",
    "symbol": "$NUAN",
    "type": "TICKER",
    "updatedAt": 2022-02-07T09:48:46.503Z,
  },
  Object {
    "createdAt": 2022-02-07T09:48:46.821Z,
    "id": "ckzcihx0l1078abpedm75wcto",
    "symbol": "$NDAQ",
    "type": "TICKER",
    "updatedAt": 2022-02-07T09:48:46.821Z,
  },
  Object {
    "createdAt": 2022-02-07T09:48:47.094Z,
    "id": "ckzcihx861476abper2afek8g",
    "symbol": "$DMYI",
    "type": "TICKER",
    "updatedAt": 2022-02-07T09:48:47.095Z,
  },
  Object {
    "createdAt": 2022-02-07T09:48:47.111Z,
    "id": "ckzcihx8n1510abpeqcolhjm1",
    "symbol": "[[Unit]]",
    "type": "TOPIC",
    "updatedAt": 2022-02-07T09:48:47.111Z,
  },
  Object {
    "createdAt": 2022-02-07T09:48:47.111Z,
    "id": "ckzcihx8n1512abpejfw0npey",
    "symbol": "[[Warrant]]",
    "type": "TOPIC",
    "updatedAt": 2022-02-07T09:48:47.111Z,
  },
  Object {
    "createdAt": 2022-02-07T09:48:47.487Z,
    "id": "ckzcihxj31962abpelo7ttp6s",
    "symbol": "[[pointbet]]",
    "type": "TOPIC",
    "updatedAt": 2022-02-07T09:48:47.488Z,
  },
  Object {
    "createdAt": 2022-02-07T09:48:48.489Z,
    "id": "ckzcihyax3294abpey7k372dz",
    "symbol": "$UFPI",
    "type": "TICKER",
    "updatedAt": 2022-02-07T09:48:48.490Z,
  },
  Object {
    "createdAt": 2022-02-07T09:48:47.110Z,
    "id": "ckzcihx8m1506abpe72zdpzxu",
    "symbol": "[[SPAC]]",
    "type": "TOPIC",
    "updatedAt": 2022-02-07T09:48:47.111Z,
  },
  Object {
    "createdAt": 2022-02-07T09:48:49.383Z,
    "id": "ckzcihyzr4592abpekkqi1zmm",
    "symbol": "[[SoFi]]",
    "type": "TOPIC",
    "updatedAt": 2022-02-07T09:48:49.384Z,
  },
  Object {
    "createdAt": 2022-02-07T09:48:49.003Z,
    "id": "ckzcihyp74021abpeisfn4tz5",
    "symbol": "[[Bill Miller]]",
    "type": "TOPIC",
    "updatedAt": 2022-02-07T09:48:49.004Z,
  },
]
`;

exports[`SearchSymbolService.search() 2`] = `
Array [
  Object {
    "createdAt": 2022-02-07T09:48:45.704Z,
    "id": "ckzcihw5k0173abpeoeg2kah3",
    "symbol": "$AI",
    "type": "TICKER",
    "updatedAt": 2022-02-07T09:48:45.705Z,
  },
  Object {
    "createdAt": 2022-02-07T09:48:46.805Z,
    "id": "ckzcihx051045abpea04i7wr0",
    "symbol": "$ICE",
    "type": "TICKER",
    "updatedAt": 2022-02-07T09:48:46.805Z,
  },
  Object {
    "createdAt": 2022-02-07T09:48:49.364Z,
    "id": "ckzcihyz84560abpeegkc7zrp",
    "symbol": "$IPOE",
    "type": "TICKER",
    "updatedAt": 2022-02-07T09:48:49.365Z,
  },
  Object {
    "createdAt": 2022-02-07T09:48:46.275Z,
    "id": "ckzcihwlf0534abpe7bpm33r5",
    "symbol": "$WISH",
    "type": "TICKER",
    "updatedAt": 2022-02-07T09:48:46.275Z,
  },
  Object {
    "createdAt": 2022-02-07T09:48:47.360Z,
    "id": "ckzcihxfk1822abpe8fvwqf95",
    "symbol": "$ABBV",
    "type": "TICKER",
    "updatedAt": 2022-02-07T09:48:47.360Z,
  },
  Object {
    "createdAt": 2022-02-07T09:48:47.749Z,
    "id": "ckzcihxqd2266abpepu2subi4",
    "symbol": "$ABNB",
    "type": "TICKER",
    "updatedAt": 2022-02-07T09:48:47.750Z,
  },
  Object {
    "createdAt": 2022-02-07T09:48:48.268Z,
    "id": "ckzcihy4s2868abpex98j2w59",
    "symbol": "$ADBE",
    "type": "TICKER",
    "updatedAt": 2022-02-07T09:48:48.268Z,
  },
  Object {
    "createdAt": 2022-02-07T09:48:48.620Z,
    "id": "ckzcihyek3488abpek1bxldux",
    "symbol": "$AAPL",
    "type": "TICKER",
    "updatedAt": 2022-02-07T09:48:48.621Z,
  },
  Object {
    "createdAt": 2022-02-07T09:48:48.837Z,
    "id": "ckzcihykl3801abperav562m5",
    "symbol": "$DIS",
    "type": "TICKER",
    "updatedAt": 2022-02-07T09:48:48.838Z,
  },
  Object {
    "createdAt": 2022-02-07T09:48:49.118Z,
    "id": "ckzcihyse4199abpemgey3ddc",
    "symbol": "$NIO",
    "type": "TICKER",
    "updatedAt": 2022-02-07T09:48:49.118Z,
  },
  Object {
    "createdAt": 2022-02-07T09:48:46.218Z,
    "id": "ckzcihwju0468abpe7o6fw8et",
    "symbol": "$COIN",
    "type": "TICKER",
    "updatedAt": 2022-02-07T09:48:46.219Z,
  },
  Object {
    "createdAt": 2022-02-07T09:48:46.503Z,
    "id": "ckzcihwrr0738abpeowe6q7wi",
    "symbol": "$NUAN",
    "type": "TICKER",
    "updatedAt": 2022-02-07T09:48:46.503Z,
  },
  Object {
    "createdAt": 2022-02-07T09:48:46.821Z,
    "id": "ckzcihx0l1078abpedm75wcto",
    "symbol": "$NDAQ",
    "type": "TICKER",
    "updatedAt": 2022-02-07T09:48:46.821Z,
  },
  Object {
    "createdAt": 2022-02-07T09:48:47.094Z,
    "id": "ckzcihx861476abper2afek8g",
    "symbol": "$DMYI",
    "type": "TICKER",
    "updatedAt": 2022-02-07T09:48:47.095Z,
  },
  Object {
    "createdAt": 2022-02-07T09:48:48.489Z,
    "id": "ckzcihyax3294abpey7k372dz",
    "symbol": "$UFPI",
    "type": "TICKER",
    "updatedAt": 2022-02-07T09:48:48.490Z,
  },
]
`;

exports[`SearchSymbolService.search() 3`] = `
Array [
  Object {
    "createdAt": 2022-02-07T09:48:47.111Z,
    "id": "ckzcihx8n1508abpej92kfywg",
    "symbol": "[[PIPE]]",
    "type": "TOPIC",
    "updatedAt": 2022-02-07T09:48:47.111Z,
  },
  Object {
    "createdAt": 2022-02-07T09:48:47.111Z,
    "id": "ckzcihx8n1510abpeqcolhjm1",
    "symbol": "[[Unit]]",
    "type": "TOPIC",
    "updatedAt": 2022-02-07T09:48:47.111Z,
  },
  Object {
    "createdAt": 2022-02-07T09:48:47.111Z,
    "id": "ckzcihx8n1512abpejfw0npey",
    "symbol": "[[Warrant]]",
    "type": "TOPIC",
    "updatedAt": 2022-02-07T09:48:47.111Z,
  },
  Object {
    "createdAt": 2022-02-07T09:48:47.487Z,
    "id": "ckzcihxj31962abpelo7ttp6s",
    "symbol": "[[pointbet]]",
    "type": "TOPIC",
    "updatedAt": 2022-02-07T09:48:47.488Z,
  },
  Object {
    "createdAt": 2022-02-07T09:48:47.110Z,
    "id": "ckzcihx8m1506abpe72zdpzxu",
    "symbol": "[[SPAC]]",
    "type": "TOPIC",
    "updatedAt": 2022-02-07T09:48:47.111Z,
  },
  Object {
    "createdAt": 2022-02-07T09:48:49.383Z,
    "id": "ckzcihyzr4592abpekkqi1zmm",
    "symbol": "[[SoFi]]",
    "type": "TOPIC",
    "updatedAt": 2022-02-07T09:48:49.384Z,
  },
  Object {
    "createdAt": 2022-02-07T09:48:49.003Z,
    "id": "ckzcihyp74021abpeisfn4tz5",
    "symbol": "[[Bill Miller]]",
    "type": "TOPIC",
    "updatedAt": 2022-02-07T09:48:49.004Z,
  },
]
`;

exports[`SearchSymbolService.search() 4`] = `
Array [
  Object {
    "createdAt": 2022-02-07T09:48:48.095Z,
    "id": "ckzcihxzz2578abpempnj07uz",
    "symbol": "[[半導體]]",
    "type": "TOPIC",
    "updatedAt": 2022-02-07T09:48:48.096Z,
  },
]
`;

exports[`SearchSymbolService.search() 5`] = `
Array [
  Object {
    "createdAt": 2022-02-07T09:48:48.095Z,
    "id": "ckzcihxzz2578abpempnj07uz",
    "symbol": "[[半導體]]",
    "type": "TOPIC",
    "updatedAt": 2022-02-07T09:48:48.096Z,
  },
]
`;
